@@ -35,7 +35,7 @@ from . import (misc, debugger)
 MAPKEYS = {
     'C-B': ('break ${fname}:${lnum}',
                 'set breakpoint at current line'),
-    'C-E': ('clear ${fname}:${lnum}',
+    'C-K': ('clear ${fname}:${lnum}',
                 'clear breakpoint at current line'),
     'C-P': ('print ${text}',
                 'print value of selection at mouse position'),
