@@ -4,7 +4,7 @@ News
 Pyclewn 2.0
 -----------
 
-.. January 19, 2015
+.. January 20, 2015
 
 Changes
 ^^^^^^^
@@ -23,6 +23,9 @@ Changes
 * The pyclewn program is now started with the command ``python -m clewn``
   followed by the options and an optional argument that selects which debugger
   to run.
+
+* ``CTRL-E`` is a standard Vim command, replace it with ``CTRL-K`` in pyclewn
+  key mappings.
 
 New features
 ^^^^^^^^^^^^
